# rabbitmq-auth-backend-cert-regex

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  WORKSPACE.bazel  app.bzl  erlang.mk  helpers.bzl  rabbitmq-components.mk  rabbitmq_auth_backend_cert_regex.d  test_simple.erl  user-template.bazel
.github/workflows/: main.yml  nightly.yml  release.yml  test.yaml
example-config/: advanced.config  rabbitmq.conf
src/: rabbit_auth_backend_cert_regex.erl
test/: auth_SUITE.erl
